Minor changes and bug fixing
- Remove horizontal scrollbar in body page (Mostly visible in 1080p monitors and tablets)
- Make swiper certificates verify modal text higher. From 1.5rem to 1.7rem
- Remove .swiper-button-next and .swiper-button-prev in swiper certificates section for small devices such as phones. 480px and 768px media responsive max width

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -73,6 +73,7 @@
    color: #353535;
    margin: 0;
    padding: 0;
+   overflow-x: hidden;
  }
  
  /* ------------------------------------------------------------------- 
@@ -3115,7 +3116,7 @@
 .modal-content {
   position: relative;
   font-family: "montserrat-bold", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   background-color: rgba(27, 27, 27, 0.908); /* Bright background for better readability */
   color: rgb(235, 235, 235); /* Darker text for better contrast */
   padding: 30px; /* Increased padding for a cleaner look */
