--- a/static/css/swiper.css
+++ b/static/css/swiper.css
@@ -417,6 +417,10 @@ img {
     font-size: 1.7rem;
     line-height: 1.4;
   }
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -427,6 +431,10 @@ img {
   #provider-description {
     font-size: 1.4rem;
     line-height: 1.1;
+  }
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: none;
   }
 }
 
